[gd_scene load_steps=16 format=3 uid="uid://7qj5w38j1j0b"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_w5ugd"]
[ext_resource type="PackedScene" uid="uid://bpg32jgnh2jgw" path="res://Assets/Items/pistol.glb" id="2_qmomm"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_7gecn"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qs3rq"]

[sub_resource type="Gradient" id="Gradient_6n7ce"]
offsets = PackedFloat32Array(0, 0.0228571, 1)
colors = PackedColorArray(0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_qpd73"]
gradient = SubResource("Gradient_6n7ce")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_b04t0"]
gravity = Vector3(0, 0, 0)
color_ramp = SubResource("GradientTexture1D_qpd73")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dmg8s"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(1, 0.662973, 0.224851, 1)
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="PlaneMesh" id="PlaneMesh_kw40l"]
material = SubResource("StandardMaterial3D_dmg8s")
size = Vector2(0.5, 0.5)
orientation = 2

[sub_resource type="Animation" id="Animation_0i6d3"]
resource_name = "PistolIdle"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/Weapon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0.5, -0.25, -0.5), Vector3(0.5, -0.273846, -0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D/Weapon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.20944, 0, 0)]
}

[sub_resource type="Animation" id="Animation_yurse"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/Weapon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.5, -0.25, -0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D/Weapon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_qujcf"]
resource_name = "Walking"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/Weapon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(0.5, 2, 0.5, 2),
"update": 0,
"values": [Vector3(0.5, -0.25, -0.5), Vector3(0.362012, -0.200769, -0.5), Vector3(0.5, -0.25, -0.5), Vector3(0.607, -0.201, -0.5)]
}

[sub_resource type="Animation" id="Animation_1e280"]
resource_name = "shoot"
length = 0.25
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/Weapon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector3(0.5, -0.25, -0.40206), Vector3(0.5, -0.25, -0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D/Weapon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector3(0.578873, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_be1il"]
_data = {
"PistolIdle": SubResource("Animation_0i6d3"),
"RESET": SubResource("Animation_yurse"),
"Walking": SubResource("Animation_qujcf"),
"shoot": SubResource("Animation_1e280")
}

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_5tbu8"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("Camera3D:rotation")
properties/2/spawn = true
properties/2/replication_mode = 1

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_w5ugd")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_7gecn")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_qs3rq")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="Weapon" type="Node3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, -0.25, -0.5)

[node name="pistol" parent="Camera3D/Weapon" instance=ExtResource("2_qmomm")]

[node name="MuzzleFlash" type="GPUParticles3D" parent="Camera3D/Weapon/pistol"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0674887, -0.269604)
emitting = false
amount = 1
lifetime = 0.25
one_shot = true
local_coords = true
process_material = SubResource("ParticleProcessMaterial_b04t0")
draw_pass_1 = SubResource("PlaneMesh_kw40l")

[node name="RayCast3D" type="RayCast3D" parent="Camera3D"]
target_position = Vector3(0, 0, -50)
collision_mask = 2

[node name="AnimationPlayerWeapon" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_be1il")
}
playback_default_blend_time = 0.05

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_5tbu8")

[connection signal="animation_finished" from="AnimationPlayerWeapon" to="." method="_on_animation_player_weapon_animation_finished"]
